--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          <div id="main-home">
              <img src="images/map.png" width="100%"/>
          </div>
-         <div id="tabs-buttom">
+         <div id="tabs-bottom">
              <a href="weather.html">WEATHER</a>
              <a href="feedback.html">FEEDBACK</a>
          </div>
